# ComputerGraphics

./: .gitignore  .gitmodules  CMakeLists.txt  CreateBuild.bat  CreateBuilds.bat
JustnEngine/: CMakeLists.txt
JustnEngine/include/: Application.h
JustnEngine/include/Assets/: Asset.h  AssetLoader.h  AssetManager.h  FBX.h  Material.h  Mesh.h  MeshFile.h  Shader.h  Texture.h
JustnEngine/include/Cameras/: Camera.h  FlyCamera.h
JustnEngine/include/Components/: BaseComponent.h  Camera.h  Collider.h  Component.h  ComponentCollection.h  ComponentManager.h  GameObject.h  IComponentCollection.h  Light.h  MeshRenderer.h  Particles.h  PlayerController.h  RigidBody.h  Terrain.h  Transform.h
JustnEngine/include/Entitys/: EntityManager.h  GameObject.h
JustnEngine/include/Physics/: ParticleEmitter.h  PhysXManager.h
JustnEngine/include/Rendering/: FrameBuffer.h  IndexBuffer.h  Vertex.h  VertexArrayObject.h  VertexBuffer.h
JustnEngine/include/Utilities/: Data.h  GUI.h  TupleIterator.h  Utils.h
JustnEngine/src/: Application.cpp  main.cpp
JustnEngine/src/Assets/: Asset.cpp  AssetLoader.cpp  AssetManager.cpp  FBX.cpp  Material.cpp  Mesh.cpp  MeshFile.cpp  Shader.cpp  Texture.cpp
JustnEngine/src/Cameras/: Camera.cpp  FlyCamera.cpp
JustnEngine/src/Components/: Camera.cpp  Collider.cpp  Component.cpp  ComponentCollection.cpp  ComponentManager.cpp  FlyCamera.cpp  GameObject.cpp  Light.cpp  MeshRenderer.cpp  Particles.cpp  PlayerController.cpp  RigidBody.cpp  Terrain.cpp  Transform.cpp
JustnEngine/src/Entitys/: EntityManager.cpp  GameObject.cpp
JustnEngine/src/Physics/: ParticleEmitter.cpp  PhysXManager.cpp
JustnEngine/src/Rendering/: FrameBuffer.cpp  IndexBuffer.cpp  VertexArrayObject.cpp  VertexBuffer.cpp
JustnEngine/src/Utilities/: Data.cpp  GUI.cpp
TestEngine/: CMakeLists.txt
TestEngine/include/: TestEngineApp.h
TestEngine/src/: TestEngineApp.cpp  main.cpp
_Builds/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  ComputerGraphics.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
_Builds/Builds/Debug/data/shaders/: defultVertexShader.txt
_Builds/JustnEngine/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  JustnEngine.sln  JustnEngine.vcxproj  JustnEngine.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
_Builds/JustnEngine/JustnEngine.dir/Debug/: JustnEngine.vcxprojResolveAssemblyReference.cache
_Builds/JustnEngine/JustnEngine.dir/Debug/JustnEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  lib.command.1.tlog
_Builds/TestEngine/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  TestEngine.sln  TestEngine.vcxproj  TestEngine.vcxproj.filters  cmake_install.cmake
_Builds/TestEngine/TestEngine.dir/Debug/: TestEngine.vcxprojResolveAssemblyReference.cache
_Builds/TestEngine/TestEngine.dir/Debug/TestEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
_Builds/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
cmake/: FindFBX.cmake  FindPhysX.cmake
data/shaders/: defultFragmentShader.frag  defultFragmentShader.txt  defultVertexShader.vert  depth.vert  shadow.frag  shadowCollection.frag  shadowCollection.vert  terrain.frag  terrain.vert
dep/utilities/: Gizmos.cpp
